--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   master_backend:
     build: .
-    container_name: master_backend
+    container_name: master_backend_sailor
     restart: always
     ports:
       - "3000:3000" # Host port 3000 → Container port 3000
@@ -12,11 +12,11 @@ services:
     env_file:
       - .env # Load environment variables from .env
     networks:
-      - master_network # Connect to custom network
+      - master_network_sailor # Connect to custom network
 
   db:
     image: mysql:8.0
-    container_name: master_backend_db
+    container_name: master_backend_db_sailor
     ports:
       - "3321:3306" # Host port 3306 → Container port 3306
     environment:
@@ -26,9 +26,9 @@ services:
       - ../master_data:/var/lib/mysql # Persist database data locally
     restart: unless-stopped
     networks:
-      - master_network # Connect to same custom network
+      - master_network_sailor # Connect to same custom network
 
 # Custom network definition
 networks:
-  master_network:
+  master_network_sailor:
     driver: bridge # Default network type for container-to-container communication
